--- a/app/src/main/res/layout/activity_tela_cadastro_servico.xml
+++ b/app/src/main/res/layout/activity_tela_cadastro_servico.xml
@@ -20,11 +20,11 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/viewNomeS"
+                android:id="@+id/viewNomeTCS"
                 style="@style/Widget.AppCompat.AutoCompleteTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/checkMarcenariaS"
+                android:layout_below="@+id/checkMarcenariaTCS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="60dp"
@@ -41,11 +41,11 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/viewCidadeS"
+                android:id="@+id/viewCidadeTCS"
                 style="@style/Widget.AppCompat.AutoCompleteTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/viewNomeS"
+                android:layout_below="@+id/viewNomeTCS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="60dp"
@@ -60,15 +60,14 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textEstado"
                 app:layout_constraintVertical_bias="0.023" />
 
             <TextView
-                android:id="@+id/viewFoneS"
+                android:id="@+id/viewFoneTCS"
                 style="@style/Widget.AppCompat.AutoCompleteTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/viewCidadeS"
+                android:layout_below="@+id/viewCidadeTCS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="60dp"
@@ -79,7 +78,7 @@
                 android:textColorHint="#000000" />
 
             <TextView
-                android:id="@+id/textvInfoCadS"
+                android:id="@+id/textvInfoCadTCS"
                 android:layout_width="334dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -95,10 +94,10 @@
                 android:textSize="14sp" />
 
             <CheckBox
-                android:id="@+id/checkEletricaS"
+                android:id="@+id/checkEletricaTCS"
                 android:layout_width="182dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textvInfoCadS"
+                android:layout_below="@+id/textvInfoCadTCS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="5dp"
@@ -109,10 +108,10 @@
                 android:textColor="#000000" />
 
             <CheckBox
-                android:id="@+id/checkEncanamentoS"
+                android:id="@+id/checkEncanamentoTCS"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textvInfoCadS"
+                android:layout_below="@+id/textvInfoCadTCS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="195dp"
@@ -123,10 +122,10 @@
                 android:textColor="#000000" />
 
             <CheckBox
-                android:id="@+id/checkAlvenariaS"
+                android:id="@+id/checkAlvenariaTCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/checkEletricaS"
+                android:layout_below="@+id/checkEletricaTCS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="5dp"
@@ -137,10 +136,10 @@
                 android:textColor="#000000" />
 
             <CheckBox
-                android:id="@+id/checkPinturaS"
+                android:id="@+id/checkPinturaTCS"
                 android:layout_width="136dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/checkEncanamentoS"
+                android:layout_below="@+id/checkEncanamentoTCS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="195dp"
@@ -151,10 +150,10 @@
                 android:textColor="#000000" />
 
             <CheckBox
-                android:id="@+id/checkMarcenariaS"
+                android:id="@+id/checkMarcenariaTCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/checkAlvenariaS"
+                android:layout_below="@+id/checkAlvenariaTCS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="5dp"
@@ -165,10 +164,10 @@
                 android:textColor="#000000" />
 
             <CheckBox
-                android:id="@+id/checkOutrosS"
+                android:id="@+id/checkOutrosTCS"
                 android:layout_width="117dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/checkPinturaS"
+                android:layout_below="@+id/checkPinturaTCS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="195dp"
@@ -180,10 +179,10 @@
 
 
             <EditText
-                android:id="@+id/textDescAtividadesS"
+                android:id="@+id/textDescAtividadesTCS"
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:layout_below="@+id/viewFoneS"
+                android:layout_below="@+id/viewFoneTCS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="60dp"
@@ -208,10 +207,10 @@
                 android:textColorHint="#000000" />
 
             <Button
-                android:id="@+id/btnCriarServico"
+                android:id="@+id/btnCriarServicoTCS"
                 android:layout_width="161dp"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/textDescAtividadesS"
+                android:layout_below="@+id/textDescAtividadesTCS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="120dp"
@@ -224,11 +223,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textConfSenha"
                 app:layout_constraintVertical_bias="0.836" />
 
             <EditText
-                android:id="@+id/editTFS"
+                android:id="@+id/editTCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
