--- a/app/src/main/res/layout/activity_tela_edit_perfil.xml
+++ b/app/src/main/res/layout/activity_tela_edit_perfil.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/viewNomeS"
+                android:id="@+id/textNomeTEPU"
                 style="@style/Widget.AppCompat.AutoCompleteTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -41,11 +41,11 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/textEmail"
+                android:id="@+id/textEmailTEPU"
                 style="@style/Widget.AppCompat.AutoCompleteTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/viewNomeS"
+                android:layout_below="@+id/textNomeTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="60dp"
@@ -60,14 +60,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.502"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/viewNomeS" />
+                app:layout_constraintTop_toBottomOf="@+id/textNomeTEPU" />
 
             <EditText
-                android:id="@+id/textSenha"
+                android:id="@+id/textSenhaTEPU"
                 style="@style/Widget.AppCompat.AutoCompleteTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/viewFoneS"
+                android:layout_below="@+id/textFoneTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="60dp"
@@ -76,19 +76,19 @@
                 android:backgroundTint="#000000"
                 android:ems="10"
                 android:foregroundGravity="center"
-                android:hint="Senha"
+                android:hint="Nova Senha"
                 android:inputType="textPassword"
                 android:textColor="#000000"
                 android:textColorHint="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textEmail" />
+                app:layout_constraintTop_toBottomOf="@+id/textEmailTEPU" />
 
             <EditText
-                android:id="@+id/textConfSenha"
+                android:id="@+id/textConfSenhaTEPU"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textSenha"
+                android:layout_below="@+id/textSenhaTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="60dp"
@@ -105,15 +105,15 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textSenha"
+                app:layout_constraintTop_toBottomOf="@+id/textSenhaTEPU"
                 app:layout_constraintVertical_bias="0.01" />
 
             <EditText
-                android:id="@+id/viewCidadeS"
+                android:id="@+id/textCidadeTEPU"
                 style="@style/Widget.AppCompat.AutoCompleteTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textEmail"
+                android:layout_below="@+id/textEmailTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="60dp"
@@ -128,15 +128,15 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textEstado"
+                app:layout_constraintTop_toBottomOf="@+id/textEstadoTEPU"
                 app:layout_constraintVertical_bias="0.023" />
 
             <EditText
-                android:id="@+id/textEstado"
+                android:id="@+id/textEstadoTEPU"
                 style="@style/Widget.AppCompat.AutoCompleteTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/viewCidadeS"
+                android:layout_below="@+id/textCidadeTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="60dp"
@@ -151,15 +151,15 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textSenha"
+                app:layout_constraintTop_toBottomOf="@+id/textSenhaTEPU"
                 app:layout_constraintVertical_bias="0.012" />
 
             <EditText
-                android:id="@+id/textDataNasc"
+                android:id="@+id/textDataNascTEPU"
                 style="@style/Widget.AppCompat.AutoCompleteTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textEstado"
+                android:layout_below="@+id/textEstadoTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="60dp"
@@ -175,15 +175,15 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/viewCidadeS"
+                app:layout_constraintTop_toBottomOf="@+id/textCidadeTEPU"
                 app:layout_constraintVertical_bias="0.014" />
 
             <EditText
-                android:id="@+id/viewFoneS"
+                android:id="@+id/textFoneTEPU"
                 style="@style/Widget.AppCompat.AutoCompleteTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textDataNasc"
+                android:layout_below="@+id/textDataNascTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="60dp"
@@ -195,10 +195,10 @@
                 android:textColorHint="#000000" />
 
             <CheckBox
-                android:id="@+id/checkMaridoDeAluguel"
+                android:id="@+id/checkMaridoDeAluguelTEPU"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/checkUsuarioDom"
+                android:layout_below="@+id/checkUsuarioDomTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="99dp"
@@ -208,19 +208,19 @@
                 android:foregroundGravity="center"
                 android:text="Marido de Aluguel"
                 android:textColor="#000000"
-                app:layout_constraintBottom_toTopOf="@+id/btnSalvar"
+                app:layout_constraintBottom_toTopOf="@+id/btnSalvarTEPU"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.365"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/checkUsuarioDom"
+                app:layout_constraintTop_toBottomOf="@+id/checkUsuarioDomTEPU"
                 app:layout_constraintVertical_bias="0.212"
                 tools:ignore="UnknownId" />
 
             <CheckBox
-                android:id="@+id/checkUsuarioDom"
+                android:id="@+id/checkUsuarioDomTEPU"
                 android:layout_width="213dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textConfSenha"
+                android:layout_below="@+id/textConfSenhaTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="99dp"
@@ -232,26 +232,26 @@
                 android:textColor="#000000" />
 
             <TextView
-                android:id="@+id/textvInfoCadS"
+                android:id="@+id/viewvInfoCadTEPU"
                 android:layout_width="334dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/checkMaridoDeAluguel"
+                android:layout_below="@+id/checkMaridoDeAluguelTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="35dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="35dp"
                 android:foregroundTint="#000000"
-                android:text="Selecione as áreas as quais possuí conhecimento"
+                android:text="Selecione as áreas as quais possuí conhecimento!"
                 android:textColor="#000000"
                 android:textColorHint="#000000"
                 android:textSize="14sp" />
 
             <CheckBox
-                android:id="@+id/checkEletricaS"
+                android:id="@+id/checkEletricaTEPU"
                 android:layout_width="182dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textvInfoCadS"
+                android:layout_below="@+id/viewvInfoCadTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="5dp"
@@ -262,10 +262,10 @@
                 android:textColor="#000000" />
 
             <CheckBox
-                android:id="@+id/checkEncanamentoS"
+                android:id="@+id/checkEncanamentoTEPU"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textvInfoCadS"
+                android:layout_below="@+id/viewvInfoCadTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="195dp"
@@ -276,10 +276,10 @@
                 android:textColor="#000000" />
 
             <CheckBox
-                android:id="@+id/checkAlvenariaS"
+                android:id="@+id/checkAlvenariaTEPU"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/checkEletricaS"
+                android:layout_below="@+id/checkEletricaTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="5dp"
@@ -290,10 +290,10 @@
                 android:textColor="#000000" />
 
             <CheckBox
-                android:id="@+id/checkPinturaS"
+                android:id="@+id/checkPinturaTEPU"
                 android:layout_width="136dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/checkEncanamentoS"
+                android:layout_below="@+id/checkEncanamentoTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="195dp"
@@ -304,10 +304,10 @@
                 android:textColor="#000000" />
 
             <CheckBox
-                android:id="@+id/checkMarcenariaS"
+                android:id="@+id/checkMarcenariaTEPU"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/checkAlvenariaS"
+                android:layout_below="@+id/checkAlvenariaTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="5dp"
@@ -318,10 +318,10 @@
                 android:textColor="#000000" />
 
             <CheckBox
-                android:id="@+id/checkOutrosS"
+                android:id="@+id/checkOutrosTEPU"
                 android:layout_width="117dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/checkPinturaS"
+                android:layout_below="@+id/checkPinturaTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="195dp"
@@ -333,10 +333,10 @@
 
 
             <EditText
-                android:id="@+id/textDescAtividadesS"
+                android:id="@+id/textDescAtividadesTEPU"
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:layout_alignTop="@+id/checkOutrosS"
+                android:layout_alignTop="@+id/checkOutrosTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="60dp"
@@ -359,10 +359,10 @@
                 android:textColorHint="#000000" />
 
             <Button
-                android:id="@+id/btnSalvar"
+                android:id="@+id/btnSalvarTEPU"
                 android:layout_width="161dp"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/checkMaridoDeAluguel"
+                android:layout_below="@+id/checkMaridoDeAluguelTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="220dp"
@@ -375,14 +375,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textSenha"
+                app:layout_constraintTop_toBottomOf="@+id/textSenhaTEPU"
                 app:layout_constraintVertical_bias="0.836" />
 
             <Button
-                android:id="@+id/btnSalvar2"
+                android:id="@+id/btnSalvar2TEPU"
                 android:layout_width="161dp"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/textDescAtividadesS"
+                android:layout_below="@+id/textDescAtividadesTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="220dp"
@@ -398,10 +398,10 @@
                 app:layout_constraintVertical_bias="0.836" />
 
             <Button
-                android:id="@+id/btnCancelar"
+                android:id="@+id/btnCancelarTEPU"
                 android:layout_width="161dp"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/checkMaridoDeAluguel"
+                android:layout_below="@+id/checkMaridoDeAluguelTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="20dp"
@@ -414,14 +414,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textSenha"
+                app:layout_constraintTop_toBottomOf="@+id/textSenhaTEPU"
                 app:layout_constraintVertical_bias="0.836" />
 
             <Button
-                android:id="@+id/btnCancelar2"
+                android:id="@+id/btnCancelar2TEPU"
                 android:layout_width="161dp"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/textDescAtividadesS"
+                android:layout_below="@+id/textDescAtividadesTEPU"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="20dp"
